--- a/app/src/main/res/layout/custom_rows.xml
+++ b/app/src/main/res/layout/custom_rows.xml
@@ -5,6 +5,7 @@
     android:orientation="horizontal"
     android:padding="8dp"
     android:paddingBottom="16dp"
+    android:id="@+id/currentItem"
     >
 
     <TextView
